--- a/Sass/styles.scss
+++ b/Sass/styles.scss
@@ -10,4 +10,282 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 // Main CSS
+.banner {
+    width: 100%;
+    height: 100vh;
+    background-color: colors.$primary-color;
+
+    // Header
+    header {
+        display: flex;
+        position: absolute;
+        padding: 20px 10%;
+        margin: auto;
+        align-items: center;
+        .logo {
+            margin-right: 90px;
+            color: white;
+            font-size: 30px;
+            font-weight: 800;
+        }
+        nav {
+            ul {
+                list-style: none;
+                display: flex;
+                gap: 20px;
+                li {
+                    a {
+                        text-decoration: none;
+                        color: white;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+    }
+
+    .content {
+        background-image: url("/assets/img/Banner.png");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0 10%;
+        .box-content {
+            width: 50%;
+            margin: auto;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            color: white;
+            h1 {
+                font-size: 90px;
+                text-transform: uppercase;
+            }
+            h2 {
+                font-size: 30px;
+                margin: 10px 0;
+                color: colors.$secondary-color;
+            }
+            p {
+                width: 80%;
+                line-height: 25px;
+                font-style: italic;
+            }
+            form {
+                margin-top: 20px;
+                display: flex;
+                input {
+                    padding: 15px;
+                    border-radius: 0px;
+                    border: none;
+                    width: 300px;
+                }
+                button {
+                    border: none;
+                    border-radius: 0;
+                    padding: 10px 30px;
+                    background-color: colors.$secondary-color;
+                    text-transform: uppercase;
+                    font-weight: 800;
+                }
+            }
+        }
+    }
+}
+
+// About
+.about {
+    padding: 120px 30px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    background-color: colors.$bg-color;
+    h2 {
+        font-size: 44px;
+        color: colors.$primary-color
+    }
+    .bar {
+        width: 150px;
+        height: 10px;
+        background-color: colors.$secondary-color;
+        margin: auto;
+    }
+    p {
+        color: grey;
+        width: 70%;
+        margin: auto;
+        font-style: italic;
+    }
+}
+
+
+// Posts - post main
+.post-main {
+    padding: 0px 30px;
+    padding-bottom: 120px;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    background-color: colors.$bg-color;
+    display: flex;
+    .container {
+        display: flex;
+        width: 1200px;
+        margin: auto;
+    }
+    .post-main-image {
+        flex: 2;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    .post-main-content {
+        flex: 1;
+        text-align: left;
+        background-color: white;
+        padding: 60px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        h3 {
+            font-weight: 400;
+            margin-bottom: 10px;
+            color: colors.$primary-color;
+        }
+        h2 {
+            color: colors.$primary-color;
+            font-size: 44px;
+        }
+        .bar {
+            width: 100px;
+            height: 10px;
+            background-color: colors.$secondary-color;
+        }
+        p {
+            font-style: italic;
+            color: grey;
+            font-size: 16px;
+            line-height: 25px;
+        }
+    }
+}
+
+// Posts - posts
+.posts {
+    padding: 0px 30px;
+    padding-bottom: 60px;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    background-color: colors.$bg-color;
+    display: flex;
+    .container {
+        display: flex;
+        width: 1200px;
+        margin: auto;
+        display: flex;
+        gap: 100px;
+        .posts-box {
+            flex: 1;
+            width: 100%;
+            img {
+                width: 100%;
+            }
+            .posts-box-content {
+                padding: 20px 30px;
+                background-color: white;
+            }
+        }
+    }
+}
+
+// Cta
+.cta-certified {
+    padding: 120px;
+    text-align: center;
+    background-image: url("/assets/img/Stars1.png");
+    background-color: colors.$primary-color;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    h3 {
+        font-size: 22px;
+        font-weight: 400;
+    }
+    h2 {
+        font-size: 44px;
+    }
+    .bar {
+        width: 120px;
+        height: 10px;
+        background-color: colors.$secondary-color;
+        margin: auto;
+    }
+    p {
+        width: 70%;
+        margin: auto;
+    }
+}
+
+// Footer 
+footer {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+    background-color: #ACA7C5;
+    position: relative;
+    .planet {
+        position: absolute;
+        right: 100px;
+        width: 300px;
+        top: -100px;
+    }
+    .logo {
+        color: colors.$primary-color;
+        font-size: 30px;
+        font-weight: 900;
+        margin-bottom: 20px;
+    }
+    nav {
+        ul {
+            display: flex;
+            list-style: none;
+            gap: 30px;
+            li {
+                a {
+                    text-decoration: none;
+                    color: colors.$primary-color;
+                }
+            }
+        }
+    }
+    .row-bar {
+        width: 80%;
+        margin: auto;
+        height: 3px;
+        margin: 25px 0;
+        background-color: #0706337b;
+    }
+    .credit {
+        color: colors.$primary-color;
+    }
+}
